<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="right"
    android:fitsSystemWindows="true"
    tools:context=".Product_tracking">


    <com.google.android.material.navigation.NavigationView
        android:background="@color/white"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:id="@+id/nav1"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/black"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu_b" />


        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:src="@drawable/butcar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/Label_under"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/carnew" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="252dp"
            android:layout_height="192dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="401dp"
            android:fontFamily="@font/abel"
            android:text="@string/track"
            android:textColor="#515151"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_border"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <ImageButton
                android:id="@+id/qropenbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@color/transparent"
                android:src="@drawable/qriconselector"

                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/micbtn"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:background="@color/transparent"

                android:src="@drawable/mic"
                app:layout_constraintBottom_toBottomOf="@+id/qropenbtn"
                app:layout_constraintStart_toEndOf="@+id/qropenbtn"
                app:layout_constraintTop_toTopOf="@+id/qropenbtn" />

            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="260dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/courierimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dropdown" />
            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:layout_marginStart="5dp"
                android:background="@color/transparent"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:hint="@string/enter_consignment_id"
                android:inputType="text"
                android:letterSpacing="0"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toEndOf="@+id/micbtn"
                app:layout_constraintTop_toTopOf="@+id/view2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar1"
            app:layout_constraintVertical_bias="0.234"
            app:srcCompat="@drawable/miscd" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/turn_on_notifications_for_this_order"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintStart_toStartOf="@+id/input"
                app:layout_constraintTop_toBottomOf="@+id/input"
                app:layout_constraintVertical_bias="0.108" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/special" />

        <TextView
            android:id="@+id/output"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send" />

        <ProgressBar
            android:id="@+id/progressBar20"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/send"
            app:layout_constraintEnd_toEndOf="@+id/send"
            app:layout_constraintTop_toTopOf="@+id/send" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    <EditText-->
<!--        android:id="@+id/input"-->
<!--        android:layout_width="304dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/button_border"-->
<!--        android:hint="Enter consignment ID"-->
<!--        android:inputType="textPersonName"-->
<!--        android:padding="20dp"-->
<!--        android:text=""-->
<!--        android:textColor="#BCB7B7"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/qropenbtn"-->
<!--        android:layout_width="64dp"-->
<!--        android:layout_height="64dp"-->
<!--        android:layout_marginBottom="8dp"-->

<!--        android:background="@color/transparent"-->
<!--        android:src="@drawable/qricon"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/input"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/input"-->
<!--        app:layout_constraintStart_toStartOf="@+id/input" />-->

<!--    <Button-->
<!--        android:id="@+id/send"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="76dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/input" />-->

<!--    <TextView-->
<!--        android:id="@+id/output"-->
<!--        style="@style/TextAppearance.AppCompat.Headline"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:gravity="center"-->
<!--        android:text=""-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/send" />-->
</androidx.drawerlayout.widget.DrawerLayout>